Liquibase. Интеграционные тесты.